--- a/eventRegistration/eventRegistration.csproj
+++ b/eventRegistration/eventRegistration.csproj
@@ -26,10 +26,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.4.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="16.170.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
     <PackageReference Include="MimeKit" Version="3.4.2" />
     <PackageReference Include="QRCoder" Version="1.3.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="XAct.Core.PCL" Version="0.0.5014" />
     <PackageReference Include="ZXing.Net" Version="0.16.8" />
   </ItemGroup>
 
