--- a/eventRegistration/appsettings.json
+++ b/eventRegistration/appsettings.json
@@ -2,12 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     },
     "AllowedHosts": "*"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BATOOL;Database=Event;MultipleActiveResultSets=true;Trust Server Certificate = true; User Id=batool; Password=123"
+    "DefaultConnection": "Server=BATOOL;Database=Event;MultipleActiveResultSets=true;TrustServerCertificate=true User Id=batool; Password=123"
   },
   "EmailConfig": {
     "SmtpServer": "smtp.gmail.com",
