more Hangfire server fine tuning use more than one email account for sending invitations out schedule sending invitation with 2 sec delay Stop sending invitation to Bcc

--- a/eventRegistration/appsettings.json
+++ b/eventRegistration/appsettings.json
@@ -14,7 +14,13 @@
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
     "Username": "qr@pita.ps",
-    "Password": "QR@12345"
+    "Password": "QR@12345",
+    "Accounts": [
+      {
+        "Username": "qr@pita.ps",
+        "Password": "QR@12345"
+      }
+    ]
   },
   "Swagger": {
     "BasePath" :  ""
