--- a/eventRegistration/appsettings.json
+++ b/eventRegistration/appsettings.json
@@ -19,6 +19,10 @@
       {
         "Username": "qr@pita.ps",
         "Password": "QR@12345"
+      },
+      {
+        "Username": "expo@pita.ps",
+        "Password": "4u2*27926bhR%4jZ"
       }
     ]
   },
